objects/Zendesk__ZendeskCustomFieldValue__c.object
<CustomObject>
    <fields>
        <fullName>Zendesk__SalesforceValue__c</fullName>
        <label>Salesforce Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__ZendeskCustomField__c</fullName>
        <label>Zendesk Custom Field</label>
        <referenceTo>Zendesk__ZendeskCustomField__c</referenceTo>
        <relationshipLabel>Zendesk Custom Field Values</relationshipLabel>
        <relationshipName>Zendesk_Custom_Field_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zendesk__ZendeskLabel__c</fullName>
        <label>Zendesk Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__ZendeskValue__c</fullName>
        <label>Zendesk Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Zendesk Custom Field Value</label>
    <nameField>
        <displayFormat>ZCFV-{YY}{MM}{DD}{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zendesk Custom Field Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>